Fixed issue with smartphone view appearing horizontal scrollbar by assigning xs=23 not xs=24 in page component

--- a/src/components/02_Molecules/AromsSliderMolecule.css
+++ b/src/components/02_Molecules/AromsSliderMolecule.css
@@ -2,3 +2,9 @@
   vertical-align: top;
   /* height: 50px; */
 }
+
+.icon-delete-arom {
+  margin-left: 10;
+  font-size: 1.5em;
+  color: '#9fd2f6';
+}
